--- a/confirm.html
+++ b/confirm.html
@@ -293,7 +293,7 @@ productPriceElement.textContent = productData.price2;
             });
             // yo ho kk----------
             function sendEmail (){
-                fetch('http://localhost:3000/send-email', {
+                fetch('https://Dinesh651.github.io/treetales/send-email', {
             method: 'POST',
             
             headers: {
