--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="hero">
         <h1>Plant your own Tree</h1>
-        <p>One Step Closer towards Saving Mother Earth</p>
+        <p>One Step CLoser towards Saving Mother Earth</p>
         <div class="category-buttons">
             <button>Pokhara</button>
             <button>Kathmandu</button>
