--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>TreeTales - Plant your own Tree</title>
 	<!-- Link to the JavaScript file -->
     <script src="script.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5089948576185117"
+     crossorigin="anonymous"></script>
+	
+	
 </head>
 
 
