--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ window.location.href = nextPageUrl; // second page
 
 <!-- Contact Us Section -->
     <section id="contact-section">
-	<section class="contact us">
+	<section class="contact us:">
 
 	<h1>&nbsp;&nbsp;&nbsp;&nbsp;</h1>
 	<h1>&nbsp;&nbsp;&nbsp;&nbsp;Contact Us</h1>
